<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="white">#FFFFFF</color>
    <string name="app_name">Task Manager Learning Project</string>
	<string name="add_task">Add Task</string>
	<string name="tasks">tasks</string>
	<string name="cancel">Cancel</string>
	<string name="unsaved_changes_title">Unsaved Changes</string>
	<string name="unsaved_changes_message">Would you like to add this task?</string>
	<string name="discard">Discard</string>
	<string name="no_tasks">No Tasks</string>
	<string name="remove_completed_tasks">Remove Completed Tasks</string>
</resources>