<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
	android:id="@+id/tasks_title"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/tasks"
    android:textSize="20dip"
    android:textColor="@color/white"
    />

<ListView
	android:id="@+id/android:list"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_below="@id/tasks_title"
	android:layout_above="@+id/add_button"
	/>	
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@id/android:empty"
	android:text="@string/no_tasks"
	android:gravity="center_vertical|center_horizontal"
	android:layout_below="@id/tasks_title"
	android:layout_above="@id/add_button" />
<Button
	android:id="@id/add_button"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/add_task"
	android:layout_alignParentBottom="true"
	/>
<Button
	android:id="@+id/remove_button"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/remove_completed_tasks"
	android:layout_alignParentBottom="true"
	android:layout_toRightOf="@id/add_button"
	/>

</RelativeLayout>